auto load and fixed saving/loading issue